--- a/sonar-server.properties
+++ b/sonar-server.properties
@@ -1,3 +1,3 @@
 sonar.projectKey=java-jenkins-sonar
 sonar.sources=.
-sonar.java.binaries=**/target/classes 
+sonar.java.binaries=home/coursework_1/ 
